# UD3D

./: README.md
UD3D/: CMakeLists.txt
UD3D/examples/project1/: CMakeLists.txt
UD3D/examples/project1/include/: game.h  scene.h
UD3D/examples/project1/resources/shaders/: default.frag  default.vert
UD3D/examples/project1/resources/shaders/skybox/: skybox.frag  skybox.vert
UD3D/examples/project1/src/: main.cpp
UD3D/examples/project1/src/game/: game.cpp  scene.cpp
UD3D/include/: engine.h
UD3D/include/audio/: sound.h  sound_buffer.h  sound_device.h  sound_effects.h  sound_effects_lib.h
UD3D/include/buffers/: ebo.h  vao.h  vbo.h
UD3D/include/cameras/: camera.h  free_cam.h
UD3D/include/core/: mesh.h  model.h  shaders.h  shapes.h  textures.h  window.h
UD3D/include/globals/: global_structs.h  global_types.h
UD3D/include/managers/: scene_manager.h
UD3D/include/misc/: skybox.h
UD3D/include/scripting/: lua_functions.h  lua_scripts.h
UD3D/include/utils/: gl_errors.h  timer.h  utils.h  windowsapi.h
UD3D/libs/freetype/objs/: freetype.dll.recipe  freetype.lib
UD3D/libs/freetype/objs/Win32/Debug/: freetype.exp  freetype.ilk  freetype.vcxproj.FileListAbsolute.txt  ftver.res
UD3D/libs/freetype/objs/Win32/Debug/freetype.tlog/: CL.62476.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  freetype.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
UD3D/libs/glad/: CMakeLists.txt
UD3D/libs/glfw-3.4/: CMakeLists.txt
UD3D/libs/imgui-docking/: CMakeLists.txt
UD3D/libs/stb/: CMakeLists.txt
UD3D/src/audio/: sound.cpp  sound_buffer.cpp  sound_device.cpp  sound_effects.cpp  sound_effects_lib.cpp
UD3D/src/buffers/: ebo.cpp  vao.cpp  vbo.cpp
UD3D/src/cameras/: camera.cpp  free_cam.cpp
UD3D/src/core/: mesh.cpp  model.cpp  shaders.cpp  shapes.cpp  textures.cpp  window.cpp
UD3D/src/managers/: scene_manager.cpp
UD3D/src/misc/: skybox.cpp
UD3D/src/scripting/: lua_functions.cpp  lua_scripts.cpp
UD3D/src/utils/: gl_errors.cpp  utils.cpp
